# rpg_vikit

./: .gitignore
vikit_common/: CMakeLists.txt  package.xml
vikit_common/include/vikit/: abstract_camera.h  homography.h  img_align.h  math_utils.h
vikit_common/src/: homography.cpp  img_align.cpp  math_utils.cpp
vikit_ros/: CMakeLists.txt  package.xml
vikit_ros/include/vikit/: camera_loader.h  output_helper.h
vikit_ros/src/: camera_loader.cpp  output_helper.cpp  test_camera.cpp
